Strengthen Step 7 pass quality across pipeline